feat: prepare Java 25 migration